--- a/game.html
+++ b/game.html
@@ -223,6 +223,7 @@ moveEverything();
 
 drawEverything();
 
+
  
 
 }, 1000/FPS);
@@ -494,7 +495,12 @@ ballSpeedY = -ballSpeedY;
  
 
  
+function drawNet(){
 
+	for (var i = 0; i < canvas.height; i+=40) {
+		colorRect(canvas.width/2-1,i,2,20,"white");	
+	}
+}
 
  
 
@@ -516,6 +522,8 @@ function drawEverything() {
  
 
 if (showingWinScreen) {
+
+
 
 canvasContext.fillStyle="white";
 
@@ -539,7 +547,7 @@ return;
 }
 
  
-
+			drawNet();
                         colorRect(0,paddle1Y,PADDLE_WIDTH,PADDLE_HEIGHT,'white');
 
  
